# OwlNM

./: CMakeLists.txt  LICENSE  Makefile  README.md  master_starter  server_starter  test  test.c
doc/: OwlMedia.md  RPi-setup.md  ffmpeg cmds
include/: OwlMedia.conf  OwlMedia.conf.bak  OwlNM.conf  OwlNM.h  client.h  common.h  config.h  config.h.bak  config.h.in  control.h  key_util.h  server.h  service_client.h  service_server.h  video.h
src/: OwlNM.c  OwlNM.c.bak  client.c  common.c  config.c  config.c.bak  control.c  control.c.bak  control.c.old  key_util.c  server.c  service_client.c  service_server.c  test.c  video.c
